# Oslo-Newcomer-RAG

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sources.yml  stress_test.py
alembic/: env.py
alembic/versions/: 0001_create_database_layer.py
eval/: gold_questions.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/tests/: app.spec.ts
src/oslo_newcomer_rag/: __init__.py  __main__.py  chat_flow.py  config.py  evaluation.py  generation.py  ingestion.py  main.py  release_checks.py  retrieval.py  server.py  sources.py
src/oslo_newcomer_rag/db/: __init__.py  models.py  session.py
tests/: conftest.py  test_chat_flow.py  test_config.py  test_database_models.py  test_evaluation.py  test_feedback.py  test_generation.py  test_health.py  test_ingestion.py  test_release_checks.py  test_retrieval.py  test_source_registry.py
