[project]
name = "oslo-newcomer-rag"
version = "0.1.0"
description = "A RAG assistant for newcomers to Oslo navigating public services"
readme = "README.md"
authors = [
    { name = "Leo" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
oslo-newcomer-rag = "oslo_newcomer_rag.__main__:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
