[project]
name = "oslo-newcomer-rag"
version = "0.1.0"
description = "A RAG assistant for newcomers to Oslo navigating public services"
readme = "README.md"
authors = [
    { name = "Leo" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
oslo-newcomer-rag = "oslo_newcomer_rag.__main__:main"
oslo-ingest-sources = "oslo_newcomer_rag.ingestion:main"
oslo-build-embeddings = "oslo_newcomer_rag.retrieval:embeddings_main"
oslo-retrieve = "oslo_newcomer_rag.retrieval:retrieval_main"
rag-eval = "oslo_newcomer_rag.evaluation:main"
release-check = "oslo_newcomer_rag.release_checks:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
